[package]
name = "gat-gwm"
description = "Alternating tiler for GlazeWM via WebSocket IPC, effectively a sloppy rewrite of Burgr033's Python script in Rust."
authors = ["ParasiteDelta"]
version = "0.3.1"
edition = "2021"
license = "GPLv3"

[dependencies]
anyhow = "1.0.82"
serde_json = "1.0.116"
tokio = { version = "1.37.0", features = ["full"] }
tray-item = "0.10.0"
tungstenite = "0.26.1"

[build-dependencies]
embed-resource = "3.0.1"

[profile.release]
codegen-units = 4
lto = true
opt-level = "s"
strip = "debuginfo"

[features]
no_console = []
